src/tests/testfiles/function-declarations/7.txt
Error at 4:5: Function: undefined reference
sum(1, 2);
^
